--- a/practice-folder/sineWave.ipynb
+++ b/practice-folder/sineWave.ipynb
@@ -18,7 +18,7 @@
    ],
    "source": [
     "from matplotlib import pyplot as plt\n",
-    "\n",
+    "import numpy as np\n",
     "\n",
     "x = np.linspace(0, 3*np.pi, 1001)\n",
     "y = np.sin(x)\n",
